tests/eval/exp/good/let.scilla
let x = Int32 42 in
let f = fun (z : Int) => x in
let y = x in
let a = y in
a